# emoji-commit

./: Cargo.toml  readme.md
src/: commit_rules.rs  commit_type.rs  git.rs  input_string.rs  main.rs
