[package]
name = "emoji-commit"
version = "0.1.8"
authors = ["Linus Unnebäck <linus@folkdatorn.se>"]
edition = "2021"

description = "Make your git logs beautiful and readable with the help of emojis"
homepage = "https://github.com/LinusU/emoji-commit"
documentation = "https://github.com/LinusU/emoji-commit#readme"
repository = "https://github.com/LinusU/emoji-commit"
keywords = ["commit", "committer", "emoji", "git", "log"]
readme = "readme.md"
license = "MIT"

[dependencies]
termion = "1.0"
log-update = "~0.1.0"
default-editor = "~0.1.0"
emoji-commit-type = "~0.1.1"
git2 = "~0.15.0"
structopt = "~0.3"
ansi_term = "~0.12"
